# battleproof

./: .gitignore  Cargo.toml
app/: .gitignore  Cargo.toml  Interoper.toml  Trunk.toml  bacon.toml  build.rs  index.html  tailwind.config.js
app/src/: main.rs
app/src/ui/foundation/: focus.rs  id.rs  mod.rs
app/src/util/: macros.rs  mod.rs
app/src/util/dom/: events.rs
app/styles/templates/: index.css  override-components.css  plugins.css
entrypoint/: Cargo.toml  tauri.conf.json
entrypoint/src/: main.rs
tauri/src/: lib.rs
