cargo-features = ["per-package-target"]

[package]
name = "app"
version = "0.1.0"
edition = "2024"
forced-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.47", features = ["macros", "rt", "time"] }
sycamore = { version = "0.9", features = ["suspense"] }
sycamore-router = "0.9"
gloo = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CssStyleDeclaration", "HtmlElement", "HtmlDialogElement"] }
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
validator = "0.20"
snowflake = { git = "https://github.com/kappa8719/snowflake.git", rev = "e4c830edd1fcd7269fa9be9e669d1cee7dd5b367" }

[build-dependencies]
interoper = { git = "https://github.com/kappa8719/interoper" }
anyhow = "1"
serde = "1"
serde_json = "1"
walkdir = "2"
