[package]
name = "entrypoint"
version = "0.1.0"
description = "Battleproof desktop application with tauri"
authors = ["kappa8719"]
repository = "https://github.com/kappa8719/battleproof"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rhenite = { git = "https://github.com/kappa8719/rhenite", features = ["tauri-host"] }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
